# cpp-example

./: CMakeLists.txt  README.md
conf/: config.yaml
include/: animal.h  animal_factory.h  cat.h  dog.h
src/: main.cpp
src/api/: animal_factory.cpp  cat.cpp  dog.cpp
